--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GamesLand</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="icon" sizes="180x180" href="https://i.ibb.co/2Ym0rBwB/apple-touch-icon.png">
   <style>
   html {
   scroll-behavior: smooth;
@@ -183,7 +184,7 @@ header{position: relative;}
       margin: 0 0 5px;
     }
  .game-info p{display: flex;align-items:center;gap:8px;}
- .game-info svg{fill: #ccc}
+ .game-info svg{fill: #ccc;}
  .light-mode .game-info svg{fill:black;}
  .rating {
       display: inline-block;
@@ -381,7 +382,9 @@ header{position: relative;}
       padding-left: 20px;
     }
     li {
-      margin-bottom: 10px;
+      margin-bottom: 12px;
+      text-align: left;
+      font-size: 1rem;
     }
   </style>
 </head>
@@ -390,7 +393,7 @@ header{position: relative;}
     <header>
       <div class="container">
         <div class="logo-section">
-          <img src="https://i.ibb.co/9HDhFYb8/Picsart-25-05-15-22-23-06-229.png" alt="Logo" />
+          <img src="https://i.ibb.co/vxv6Bn2y/Picsart-25-05-15-22-23-06-229.png" alt="Logo" />
         </div>
         <div class="toggle-section" onclick="toggleDarkMode()" id="themeToggle">
   <svg id="themeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -560,14 +563,26 @@ function getStarRatingHTML(rating) {
           <img src="${game.logoUrl}" alt="${game.name} logo">
           <div class="game-info">
             <h3>${game.name}</h3><span class="rating">${getStarRatingHTML(game.rate)}</span> <strong>${game.rate}</strong>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-  <path d="M7 3h10v2H7zM7 19h10v2H7zM4 8h16v8H4zM12 10h2v4h-2zM12 14h2v2h-2z"/>
-</svg><strong> ${game.version}</strong> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-  <path d="M5 20h14v-2H5v2zm7-18v12l5-5h-3V4h-4v5H7l5 5z"/>
-</svg><strong> ${game.downloads} </strong></p>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-  <path d="M12 2c5.5 0 10 4.5 10 10S17.5 22 12 22 2 17.5 2 12 6.5 2 12 2zm0 18c4.4 0 8-3.6 8-8S16.4 4 12 4 4 7.6 4 12s3.6 8 8 8zm-1-13h2v6l4 2-1 2-5-2V7z"/>
-</svg><strong>${game.updateDate}</strong></p>
+            <p>
+<svg version="1.1" width="20" height="20" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+<path d="m25.305 18.438c1.1719 0.76562 1.1172 2.5469-0.16016 3.2188l-8.9766 4.7461c-0.73047 0.38672-1.6055 0.38672-2.3359 0l-8.9766-4.7461c-1.2773-0.67188-1.3281-2.4531-0.16016-3.2188l0.078126 0.050781 9.0586 4.7891c0.73047 0.38672 1.6055 0.38672 2.3359 0l8.9766-4.7461c0.058594-0.027344 0.10938-0.058594 0.16016-0.09375zm0-5c1.1211 0.73438 1.1172 2.3945 0 3.125l-0.16016 0.09375-8.9766 4.7461c-0.66406 0.35156-1.4453 0.38281-2.1328 0.097656l-0.20312-0.097656-8.9766-4.7461c-1.2773-0.67188-1.3281-2.4531-0.16016-3.2188l0.078126 0.050781 9.0586 4.7891c0.66406 0.35156 1.4492 0.38281 2.1328 0.097656l0.20312-0.097656 8.9766-4.7461c0.058594-0.027344 0.10938-0.058594 0.16016-0.09375zm-9.1367-9.8398 8.9766 4.7461c1.332 0.70312 1.332 2.6094 0 3.3125l-8.9766 4.7461c-0.73047 0.38672-1.6055 0.38672-2.3359 0l-8.9766-4.7461c-1.332-0.70312-1.332-2.6094 0-3.3125l8.9766-4.7461c0.73047-0.38672 1.6055-0.38672 2.3359 0z"/>
+</svg>
+<strong> ${game.version}</strong>
+<svg version="1.1" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+<path d="m10 5.207c0.34375 0 0.625 0.28125 0.625 0.625v4.3242l1.4336-1.4297c0.24219-0.24609 0.64062-0.24609 0.88281 0 0.24609 0.24219 0.24609 0.63672 0 0.88281l-2.5 2.5c-0.11719 0.11719-0.27734 0.18359-0.44141 0.18359s-0.32422-0.066407-0.44141-0.18359l-2.5-2.5c-0.24609-0.24609-0.24609-0.64062 0-0.88281 0.24219-0.24609 0.64062-0.24609 0.88281 0l1.4336 1.4297v-4.3242c0-0.34375 0.28125-0.625 0.625-0.625z"/>
+<path d="m6.043 14.168c0-0.34766 0.27734-0.625 0.625-0.625h6.6641c0.34766 0 0.625 0.27734 0.625 0.625 0 0.34375-0.27734 0.625-0.625 0.625h-6.6641c-0.34766 0-0.625-0.28125-0.625-0.625z"/>
+<path d="m9.9531 1.043c-1.9258 0-3.4336 0-4.6094 0.15625-1.2031 0.16406-2.1523 0.5-2.8984 1.2461-0.74609 0.74609-1.082 1.6953-1.2461 2.8984-0.15625 1.1758-0.15625 2.6836-0.15625 4.6094v0.09375c0 1.9258 0 3.4336 0.15625 4.6094 0.16406 1.2031 0.5 2.1523 1.2461 2.8984 0.74609 0.74609 1.6953 1.082 2.8984 1.2461 1.1758 0.15625 2.6836 0.15625 4.6094 0.15625h0.09375c1.9258 0 3.4336 0 4.6094-0.15625 1.2031-0.16406 2.1523-0.5 2.8984-1.2461 0.74609-0.74609 1.082-1.6953 1.2461-2.8984 0.15625-1.1758 0.15625-2.6836 0.15625-4.6094v-0.09375c0-1.9258 0-3.4336-0.15625-4.6094-0.16406-1.2031-0.5-2.1523-1.2461-2.8984-0.74609-0.74609-1.6953-1.082-2.8984-1.2461-1.1758-0.15625-2.6836-0.15625-4.6094-0.15625zm-6.625 2.2852c0.47656-0.47266 1.1172-0.74609 2.1836-0.89062 1.082-0.14453 2.5078-0.14453 4.4883-0.14453s3.4062 0 4.4883 0.14453c1.0664 0.14453 1.707 0.41797 2.1836 0.89062 0.47266 0.47656 0.74609 1.1172 0.89062 2.1836 0.14453 1.082 0.14453 2.5078 0.14453 4.4883s0 3.4062-0.14453 4.4883c-0.14453 1.0664-0.41797 1.707-0.89062 2.1836-0.47656 0.47266-1.1172 0.74609-2.1836 0.89062-1.082 0.14453-2.5078 0.14453-4.4883 0.14453s-3.4062 0-4.4883-0.14453c-1.0664-0.14453-1.707-0.41797-2.1836-0.89062-0.47266-0.47656-0.74609-1.1172-0.89062-2.1836-0.14453-1.082-0.14453-2.5078-0.14453-4.4883s0-3.4062 0.14453-4.4883c0.14453-1.0664 0.41797-1.707 0.89062-2.1836z" fill-rule="evenodd"/>
+
+</svg>
+<strong> ${game.downloads} </strong></p>
+            <p>
+<svg version="1.1" width="18" height="18" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+<g>
+<path d="m20 7.2344v-6.6484l-2.6406 2.6406-0.29688-0.29297c-1.8867-1.8906-4.3984-2.9297-7.0664-2.9297-5.5117 0-9.9961 4.4844-9.9961 9.9961s4.4844 9.9961 9.9961 9.9961c5.5117 0 9.9961-4.4844 9.9961-9.9961h-1.9336c0 4.4453-3.6172 8.0625-8.0625 8.0625-4.4453 0-8.0625-3.6172-8.0625-8.0625s3.6172-8.0625 8.0625-8.0625c2.1523 0 4.1758 0.83984 5.6992 2.3633l0.29688 0.29688-2.6406 2.6367z"/>
+<path d="m9.9961 10v-3.5469h-1.9336v5.4805h5.4805v-1.9336z"/>
+</g>
+</svg>
+<strong>${game.updateDate}</strong></p>
           </div>
         `;
         // wire up the real JSON id
@@ -706,6 +721,7 @@ window.addEventListener("popstate", () => {
       function toggleGuide() {
       const tabs = document.getElementById("platformTabs");
       tabs.style.display = tabs.style.display === "none" ? "block" : "none";
+      tabs.scrollIntoView({ behavior: 'smooth' });
     }
 
     function showTab(tabId) {
