--- a/admin.html
+++ b/admin.html
@@ -382,6 +382,13 @@
         <span class="slider"></span>
       </label>
     </div>
+    <div class="form-group switch-label">
+      <label for="isFeatured">Featured</label>
+      <label class="switch">
+        <input type="checkbox" id="isFeatured" />
+        <span class="slider"></span>
+      </label>
+    </div>
     <div class="button-row">
       <button id="addGameBtn">Add Game</button>
       <button id="clearBtn">Clear</button>
@@ -396,248 +403,252 @@
   </div>
   <h2 id="gameCount" style="margin-bottom: 10px; color: #444;"></h2>
   <div class="game-list" id="gameList"></div>
+<script>
+  let games = JSON.parse(localStorage.getItem("games")) || [];
+  let editIndex = null;
 
-  <script>
-    let games = JSON.parse(localStorage.getItem("games")) || [];
-    let editIndex = null;
+  const fields = [
+    "logoUrl",
+    "coverUrl",
+    "name",
+    "version",
+    "description",
+    "downloads",
+    "rate",
+    "lockerLink",
+    "modFeatures",
+    "updateDate",
+    "size",
+    "androidLink",
+    "iosLink",
+    "appleStoreVisible",
+    "isFeatured"
+  ];
 
-    const fields = [
-      "logoUrl",
-      "coverUrl",
-      "name",
-      "version",
-      "description",
-      "downloads",
-      "rate",
-      "lockerLink",
-      "modFeatures",
-      "updateDate",
-      "size",
-      "androidLink",
-      "iosLink",
-      "appleStoreVisible"
-    ];
+  const addGameBtn = document.getElementById("addGameBtn");
+  const iosLinkInput = document.getElementById("iosLink");
+  const appleStoreSwitch = document.getElementById("appleStoreVisible");
 
-    const addGameBtn = document.getElementById("addGameBtn");
-    const iosLinkInput = document.getElementById("iosLink");
-    const appleStoreSwitch = document.getElementById("appleStoreVisible");
+  // Function to toggle iosLink input based on appleStoreVisible state
+  const toggleIosLink = () => {
+    iosLinkInput.disabled = !appleStoreSwitch.checked;
+  };
 
-    // Function to toggle iosLink input based on appleStoreVisible state
-    const toggleIosLink = () => {
-      iosLinkInput.disabled = !appleStoreSwitch.checked;
-    };
+  // Initialize iosLink state on page load
+  toggleIosLink();
 
-    // Initialize iosLink state on page load
-    toggleIosLink();
+  // Add event listener to toggle iosLink when appleStoreVisible changes
+  appleStoreSwitch.addEventListener("change", toggleIosLink);
 
-    // Add event listener to toggle iosLink when appleStoreVisible changes
-    appleStoreSwitch.addEventListener("change", toggleIosLink);
+  const clearFields = () => {
+    fields.forEach(id => {
+      const el = document.getElementById(id);
+      if (id === "appleStoreVisible" || id === "isFeatured") {
+        el.checked = false;
+      } else {
+        el.value = "";
+      }
+    });
+    toggleIosLink(); // Ensure iosLink is disabled after clearing
+    editIndex = null;
+    addGameBtn.textContent = "Add Game";
+  };
 
-    const clearFields = () => {
-      fields.forEach(id => {
-        const el = document.getElementById(id);
-        if (id === "appleStoreVisible") {
-          el.checked = false;
+  document.getElementById("clearBtn").addEventListener("click", () => {
+    fields.forEach(id => {
+      const el = document.getElementById(id);
+      if (id === "appleStoreVisible" || id === "isFeatured") {
+        el.checked = false;
+      } else {
+        el.value = "";
+      }
+    });
+    toggleIosLink(); // Ensure iosLink is disabled after clearing
+  });
+
+  document.getElementById("uploadJson").addEventListener("change", function() {
+    const fileNameSpan = document.getElementById("fileName");
+    fileNameSpan.textContent = this.files.length ? this.files[0].name : "No file selected";
+    const file = this.files[0];
+    if (file) uploadJSON(file);
+  });
+
+  const getFieldValues = () => {
+    const data = {};
+    for (let id of fields) {
+      const el = document.getElementById(id);
+      if (id === "appleStoreVisible" || id === "isFeatured") {
+        data[id] = el.checked;
+      } else if (id === "iosLink" && !appleStoreSwitch.checked) {
+        data[id] = el.value.trim(); // Store value but skip validation if disabled
+      } else {
+        if (!el.value.trim()) {
+          el.style.borderColor = "red";
+          return null;
         } else {
-          el.value = "";
+          el.style.borderColor = "#ccc";
+          data[id] = el.value.trim();
         }
-      });
-      toggleIosLink(); // Ensure iosLink is disabled after clearing
+      }
+    }
+    return data;
+  };
+
+  const renderGames = () => {
+    document.getElementById("gameCount").textContent = `Total Games: ${games.length}`;
+    const list = document.getElementById("gameList");
+    list.innerHTML = "";
+    games.forEach((game, i) => {
+      const card = document.createElement("div");
+      card.className = "game-card";
+      card.innerHTML = `
+        <h3>${game.name} (${game.version})</h3>
+        <p>${game.description}</p>
+        <p><strong>Logo URL:</strong> ${game.logoUrl || "N/A"}</p>
+        <p><strong>Cover URL:</strong> ${game.coverUrl || "N/A"}</p>
+        <p><strong>Android Link:</strong> ${game.androidLink || "N/A"}</p>
+        <p><strong>iOS Link:</strong> ${game.appleStoreVisible ? (game.iosLink || "N/A") : "Not shown in Apple Store"}</p>
+        <p><strong>Featured:</strong> ${game.isFeatured ? "Yes" : "No"}</p>
+        <button onclick="editGame(${i})">Edit</button>
+        <button onclick="removeGame(${i})">Remove</button>
+        <button onclick="moveUp(${i})">↑ Up</button>
+        <button onclick="moveDown(${i})">↓ Down</button>
+      `;
+      list.appendChild(card);
+    });
+  };
+
+  window.moveUp = function(index) {
+    if (index > 0) {
+      [games[index], games[index - 1]] = [games[index - 1], games[index]];
+      saveToLocalStorage();
+      renderGames();
+    }
+  };
+
+  window.moveDown = function(index) {
+    if (index < games.length - 1) {
+      [games[index], games[index + 1]] = [games[index + 1], games[index]];
+      saveToLocalStorage();
+      renderGames();
+    }
+  };
+
+  window.editGame = function(index) {
+    const game = games[index];
+    fields.forEach(id => {
+      const el = document.getElementById(id);
+      if (id === "appleStoreVisible" || id === "isFeatured") {
+        el.checked = game[id] || false;
+      } else {
+        el.value = game[id] || "";
+      }
+    });
+    toggleIosLink(); // Set iosLink disabled state based on appleStoreVisible
+    editIndex = index;
+    addGameBtn.textContent = "Edit Game";
+    document.getElementById("logoUrl").scrollIntoView({ behavior: "smooth" });
+  };
+
+  window.removeGame = function(index) {
+    games.splice(index, 1);
+    renderGames();
+    saveToLocalStorage();
+  };
+
+  const saveToLocalStorage = () => {
+    localStorage.setItem("games", JSON.stringify(games));
+  };
+
+  const downloadJSON = () => {
+    if (!games.length) {
+      alert("No data to download.");
+      return;
+    }
+
+    const blob = new Blob([JSON.stringify(games, null, 2)], { type: 'application/json' });
+    const a = document.createElement('a');
+    a.href = URL.createObjectURL(blob);
+    a.download = 'data.json';
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+  };
+
+  const uploadJSON = (file) => {
+    const reader = new FileReader();
+    reader.onload = function(event) {
+      try {
+        const result = JSON.parse(event.target.result);
+        if (Array.isArray(result)) {
+          games = result.map(game => ({
+            ...game,
+            id: game.id || Date.now() + Math.random(),
+            logoUrl: game.logoUrl || "",
+            coverUrl: game.coverUrl || "",
+            androidLink: game.androidLink || "",
+            iosLink: game.iosLink || "",
+            appleStoreVisible: game.appleStoreVisible !== undefined ? game.appleStoreVisible : false,
+            isFeatured: game.isFeatured !== undefined ? game.isFeatured : false
+          }));
+          saveToLocalStorage();
+          renderGames();
+          toggleIosLink(); // Update iosLink state after upload
+          alert("Games loaded successfully.");
+        } else {
+          alert("Invalid JSON structure.");
+        }
+      } catch (e) {
+        alert("Error parsing JSON.");
+      }
+    };
+    reader.readAsText(file);
+  };
+
+  addGameBtn.addEventListener("click", () => {
+    const game = getFieldValues();
+    if (!game) return alert("Please fill out all required fields.");
+
+    if (editIndex !== null) {
+      game.id = games[editIndex].id;
+      games[editIndex] = game;
       editIndex = null;
       addGameBtn.textContent = "Add Game";
-    };
-
-    document.getElementById("clearBtn").addEventListener("click", () => {
-      fields.forEach(id => {
-        const el = document.getElementById(id);
-        if (id === "appleStoreVisible") {
-          el.checked = false;
-        } else {
-          el.value = "";
-        }
-      });
-      toggleIosLink(); // Ensure iosLink is disabled after clearing
-    });
-
-    document.getElementById("uploadJson").addEventListener("change", function() {
-      const fileNameSpan = document.getElementById("fileName");
-      fileNameSpan.textContent = this.files.length ? this.files[0].name : "No file selected";
-      const file = this.files[0];
-      if (file) uploadJSON(file);
-    });
-
-    const getFieldValues = () => {
-      const data = {};
-      for (let id of fields) {
-        const el = document.getElementById(id);
-        if (id === "appleStoreVisible") {
-          data[id] = el.checked;
-        } else if (id === "iosLink" && !appleStoreSwitch.checked) {
-          data[id] = el.value.trim(); // Store value but skip validation if disabled
-        } else {
-          if (!el.value.trim()) {
-            el.style.borderColor = "red";
-            return null;
-          } else {
-            el.style.borderColor = "#ccc";
-            data[id] = el.value.trim();
-          }
-        }
-      }
-      return data;
-    };
-
-    const renderGames = () => {
-      document.getElementById("gameCount").textContent = `Total Games: ${games.length}`;
-      const list = document.getElementById("gameList");
-      list.innerHTML = "";
-      games.forEach((game, i) => {
-        const card = document.createElement("div");
-        card.className = "game-card";
-        card.innerHTML = `
-          <h3>${game.name} (${game.version})</h3>
-          <p>${game.description}</p>
-          <p><strong>Logo URL:</strong> ${game.logoUrl || "N/A"}</p>
-          <p><strong>Cover URL:</strong> ${game.coverUrl || "N/A"}</p>
-          <p><strong>Android Link:</strong> ${game.androidLink || "N/A"}</p>
-          <p><strong>iOS Link:</strong> ${game.appleStoreVisible ? (game.iosLink || "N/A") : "Not shown in Apple Store"}</p>
-          <button onclick="editGame(${i})">Edit</button>
-          <button onclick="removeGame(${i})">Remove</button>
-          <button onclick="moveUp(${i})">↑ Up</button>
-          <button onclick="moveDown(${i})">↓ Down</button>
-        `;
-        list.appendChild(card);
-      });
-    };
-
-    window.moveUp = function(index) {
-      if (index > 0) {
-        [games[index], games[index - 1]] = [games[index - 1], games[index]];
-        saveToLocalStorage();
-        renderGames();
-      }
-    };
-
-    window.moveDown = function(index) {
-      if (index < games.length - 1) {
-        [games[index], games[index + 1]] = [games[index + 1], games[index]];
-        saveToLocalStorage();
-        renderGames();
-      }
-    };
-
-    window.editGame = function(index) {
-      const game = games[index];
-      fields.forEach(id => {
-        const el = document.getElementById(id);
-        if (id === "appleStoreVisible") {
-          el.checked = game[id] || false;
-        } else {
-          el.value = game[id] || "";
-        }
-      });
-      toggleIosLink(); // Set iosLink disabled state based on appleStoreVisible
-      editIndex = index;
-      addGameBtn.textContent = "Edit Game";
-      document.getElementById("logoUrl").scrollIntoView({ behavior: "smooth" });
-    };
-
-    window.removeGame = function(index) {
-      games.splice(index, 1);
-      renderGames();
-      saveToLocalStorage();
-    };
-
-    const saveToLocalStorage = () => {
-      localStorage.setItem("games", JSON.stringify(games));
-    };
-
-    const downloadJSON = () => {
-      if (!games.length) {
-        alert("No data to download.");
-        return;
-      }
-
-      const blob = new Blob([JSON.stringify(games, null, 2)], { type: 'application/json' });
-      const a = document.createElement('a');
-      a.href = URL.createObjectURL(blob);
-      a.download = 'data.json';
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
-    };
-
-    const uploadJSON = (file) => {
-      const reader = new FileReader();
-      reader.onload = function(event) {
-        try {
-          const result = JSON.parse(event.target.result);
-          if (Array.isArray(result)) {
-            games = result.map(game => ({
-              ...game,
-              id: game.id || Date.now() + Math.random(),
-              logoUrl: game.logoUrl || "",
-              coverUrl: game.coverUrl || "",
-              androidLink: game.androidLink || "",
-              iosLink: game.iosLink || "",
-              appleStoreVisible: game.appleStoreVisible !== undefined ? game.appleStoreVisible : false
-            }));
-            saveToLocalStorage();
-            renderGames();
-            toggleIosLink(); // Update iosLink state after upload
-            alert("Games loaded successfully.");
-          } else {
-            alert("Invalid JSON structure.");
-          }
-        } catch (e) {
-          alert("Error parsing JSON.");
-        }
-      };
-      reader.readAsText(file);
-    };
-
-    addGameBtn.addEventListener("click", () => {
-      const game = getFieldValues();
-      if (!game) return alert("Please fill out all required fields.");
-
-      if (editIndex !== null) {
-        game.id = games[editIndex].id;
-        games[editIndex] = game;
-        editIndex = null;
-        addGameBtn.textContent = "Add Game";
-      } else {
-        game.id = Date.now();
-        games.push(game);
-      }
-
-      renderGames();
-      saveToLocalStorage();
-      clearFields();
-    });
-
-    document.getElementById("downloadBtn").addEventListener("click", downloadJSON);
-
-    document.getElementById("uploadJson").addEventListener("change", function() {
-      const file = this.files[0];
-      if (file) uploadJSON(file);
-    });
-
-    function copyJSONToClipboard() {
-      if (!games.length) {
-        alert("No games to copy.");
-        return;
-      }
-
-      const jsonStr = JSON.stringify(games, null, 2);
-      navigator.clipboard.writeText(jsonStr).then(() => {
-        alert("JSON copied to clipboard!");
-      }).catch(err => {
-        alert("Failed to copy JSON. Try a modern browser.");
-        console.error(err);
-      });
+      alert("Game edited successfully!");
+    } else {
+      game.id = Date.now();
+      games.push(game);
+      alert("Game added successfully!");
     }
 
     renderGames();
-  </script>
+    saveToLocalStorage();
+    clearFields();
+  });
+
+  document.getElementById("downloadBtn").addEventListener("click", downloadJSON);
+
+  document.getElementById("uploadJson").addEventListener("change", function() {
+    const file = this.files[0];
+    if (file) uploadJSON(file);
+  });
+
+  function copyJSONToClipboard() {
+    if (!games.length) {
+      alert("No games to copy.");
+      return;
+    }
+
+    const jsonStr = JSON.stringify(games, null, 2);
+    navigator.clipboard.writeText(jsonStr).then(() => {
+      alert("JSON copied to clipboard!");
+    }).catch(err => {
+      alert("Failed to copy JSON. Try a modern browser.");
+      console.error(err);
+    });
+  }
+
+  renderGames();
+</script>
 </body>
 </html>
